# fossil-tofu

./: CMakeLists.txt  LICENSE  README.md  SECURITY.md  conanfile.py  meson.build  meson.options
.github/: .gitignore  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/ciimage/: Dockerfile.archlinux  Dockerfile.debian  Dockerfile.fedora  Dockerfile.ubuntu
.github/crossfiles/: arm.txt  arm64.txt  mips.txt  mipsel.txt  ppc.txt  ppc64le.txt  riscv64.txt  s390x.txt  sparc64.txt
.github/workflows/: cmake_ci.yml  conanfile_ci.yml  crossfile_ci.yml  meson_ci.yml
code/: CMakeLists.txt  meson.build
code/logic/: CMakeLists.txt  algorithm.c  array.c  arraylist.c  arrayof.c  bloom.c  circularlist.c  clist.c  cqueue.c  dlist.c  doublylist.c  dqueue.c  flist.c  forwardlist.c  mapof.c  matrix.c  meson.build  pqueue.c  queue.c  setof.c  slist.c  stack.c  tiranarylist.c  tofu.c  tree.c  trie.c  tuple.c  vector.c
code/logic/fossil/algorithm/: framework.h  general.h  graph.h  search.h  sort.h
code/logic/fossil/tofu/: algorithm.h  array.h  arraylist.h  arrayof.h  bloom.h  circularlist.h  clist.h  cqueue.h  dlist.h  doublylist.h  dqueue.h  flist.h  forwardlist.h  framework.h  mapof.h  matrix.h  pqueue.h  queue.h  setof.h  slist.h  stack.h  tiranarylist.h  tofu.h  tree.h  trie.h  tuple.h  vector.h
code/tests/: meson.build  test_arrayof.c  test_doublylist.c  test_dqueue.c  test_forwardlist.c  test_mapof.c  test_pqueue.c  test_queue.c  test_setof.c  test_stack.c  test_tofu.c  test_vector.c  unit_runner.c
code/tests/cases/: test_algorithm.c  test_algorithm.cpp  test_algorithms.c  test_algorithms.cpp  test_array.c  test_array.cpp  test_arraylist.c  test_arraylist.cpp  test_arrayof.c  test_clist.c  test_clist.cpp  test_clist.m  test_clist.mm  test_cqueue.c  test_cqueue.cpp  test_cqueue.m  test_cqueue.mm  test_dlist.c  test_dlist.cpp  test_dlist.m  test_dlist.mm  test_doublylist.c  test_dqueue.c  test_dqueue.cpp  test_dqueue.m  test_dqueue.mm  test_flist.c  test_flist.cpp  test_flist.m  test_flist.mm  test_forwardlist.c  test_mapof.c  test_mapof.cpp  test_mapof.m  test_mapof.mm  test_pqueue.c  test_pqueue.cpp  test_pqueue.m  test_pqueue.mm  test_queue.c  (+32 more)
code/tests/tools/: generate-note.py  generate-runner.py  runner.py  scan-code.py  scan-todos.py  wildcard.py
subprojects/: fossil-test.wrap
